--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,11 +2,11 @@ name: tuples
 description: Tuples for Dart.
 version: 1.0.0
 author: Michał Stalmach <michal.stalmach.84@gmail.com>
-#homepage: https://www.example.com
+homepage: https://github.com/michal-stalmach/tuples
 environment:
   sdk: '>=1.0.0 <2.0.0'
 dependencies:
-  quiver: any
+  quiver: ">=0.21.4 <0.22.0"
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
   benchmark_harness: ">=1.0.0 <2.0.0"
